[package]
name = "yellowstone-grpc-source"
version = "0.1.1"
authors = ["Trustless Engineering Co. <info@trustless.engineering>"]
edition = "2021"


[dependencies]
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", features = ["plugin"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = "1.0"
fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.16.0" }
maplit = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
anyhow = "1.0"
backoff = "0.4.0"
solana-sdk = "2.1.1"
solana-transaction-status = "2.1.1"
hex = "0.4.3"
bs58 = "0.5.1"
bincode = "1.3.3"
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
# Logging
log = "0.4"
env_logger = "0.10"
serde_yaml = "0.9.34"

[workspace]
